--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
+
+
 # Temporary Build Files
 build/_output
 build/_test
+
+.build-harness
 .build-harness-bootstrap
+OPENSOURCE.check
+
+# override build harness vendoring
+!vbh/.build-harness-vendorized
+!vbh/build-harness
+!vbh/build-harness-extensions
+
 # Created by https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 ### Emacs ###
 # -*- mode: gitignore; -*-
